Incio Ejercicio Selectores

--- a/HtmlJavascript/styles.css
+++ b/HtmlJavascript/styles.css
@@ -8,3 +8,8 @@
     text-align: justify;
     padding: 2%;
 }
+.inputContainer{
+    color: brown;
+    background-color: cadetblue;
+    text-align: justify;
+}
